2013-08-29  Jan Hubicka  <jh@suse.cz>

	* lto-symtab.c (lto_cgraph_replace_node): Free decl_in_state.
	* cgraph.c (cgraph_release_function_body): Free decl_in_state.
	* lto-section-in.c (lto_free_function_in_decl_state): New function.
	(lto_free_function_in_decl_state_for_node): New function.

2013-08-29  Xinliang David Li  <davidxl@google.com>

	* loop-unroll.c (report_unroll_peel): Minor message
	change.
	* tree-vect-loop-manip.c (vect_do_peeling_for_alignment):
	Emit alignment peeling message with default -fopt-info.
	(vect_loop_versioning): Emit loop version info message.
	* tree-vectorizer.c (vectorize_loops): Minor message
	change.
	(execute_vect_slp): Ditto.

2013-08-29  Eric Botcazou  <ebotcazou@adacore.com>

	* cgraphclones.c (cgraph_create_virtual_clone): Compute the DECL_NAME
	of the clone from the DECL_NAME of the original function.

2013-08-29  Oleg Endo  <olegendo@gcc.gnu.org>

	* passes.c (register_pass): Add overload.
	* tree-pass.h (register_pass): Forward declare it.  Add comment.

2013-08-29  Jan Hubicka  <jh@suse.cz>

	* lto-streamer-out.c (hash_tree): Stream DECL_FINAL_P.
	DECL_CXX_CONSTRUCTOR_P. DECL_CXX_DESTRUCTOR_P.
	TYPE_FINAL_P.
	* lto-streamer-in.c (unpack_ts_decl_with_vis_value_fields):
	DECL_FINAL_P. DECL_CXX_CONSTRUCTOR_P and DECL_CXX_DESTRUCTOR_P.
	(unpack_ts_type_common_value_fields): Stream TYPE_FINAL_P.
	* tree-streamer-out.c (pack_ts_decl_with_vis_value_fields):
	Add DECL_FINAL_P, DECL_CXX_CONSTRUCTOR_P, DECL_CXX_DESTRUCTOR_P
	(pack_ts_type_common_value_fields): Add TYPE_FINAL_P.

2013-08-29  Teresa Johnson  <tejohnson@google.com>

	* dumpfile.c (dump_loc): Output column number.
	* dumpfile.h (OPTGROUP_OTHER): Add and enable under OPTGROUP_ALL.
	* doc/invoke.texi: Document optall -fopt-info flag.
	* profile.c (read_profile_edge_counts): Use new dump framework.
	(compute_branch_probabilities): Ditto.
	* passes.c (pass_manager::register_one_dump_file): Use OPTGROUP_OTHER
	when pass not in any opt group.